Fix pre overflow

--- a/src/_includes/styles/typography.css
+++ b/src/_includes/styles/typography.css
@@ -53,6 +53,8 @@ pre {
 
 pre {
 	padding: 0.5rem 2rem;
+	max-width: 100%;
+	overflow-x: auto;
 	background-color: var(--darker-1);
 }
 
